Implementation of DAL and Course Module

--- a/Examination_System/appsettings.json
+++ b/Examination_System/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-   "ConnectionStrings": {
-     "DefaultConnection": "Server = .; Database = ExaminationSystem; Trusted_Connection = True; TrustServerCertificate = True "
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = .; Database = ExaminationSystem; Trusted_Connection = True; TrustServerCertificate = True ; MultipleActiveResultSets=True "
   },
   "AllowedHosts": "*"
 }
